--- a/Api/src/main/resources/application.properties
+++ b/Api/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=Api
+
+// Configuración de la base de datos
+spring.datasource.url=jdbc:mysql://localhost/exchange_cripto
+spring.datasource.username=root
+spring.datasource.password=123456
