--- a/Api/src/main/resources/application.properties
+++ b/Api/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.application.name=Api
 spring.datasource.url=jdbc:mysql://localhost/exchange_cripto
 spring.datasource.username=root
 spring.datasource.password=123456
+
+// Configuracion de errores
+server.error.include-stacktrace=never
