--- a/Api/src/main/resources/application.properties
+++ b/Api/src/main/resources/application.properties
@@ -5,5 +5,7 @@ spring.datasource.url=jdbc:mysql://localhost/exchange_cripto
 spring.datasource.username=root
 spring.datasource.password=123456
 
+spring.jpa.show-sql=true
+
 // Configuracion de errores
 server.error.include-stacktrace=never
