--- a/Api/src/main/resources/application.properties
+++ b/Api/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 spring.application.name=Api
 
-// Configuración de la base de datos
-spring.datasource.url=jdbc:mysql://localhost/exchange_cripto
-spring.datasource.username=root
-spring.datasource.password=123456
+# Configuración de la base de datos
+spring.datasource.url=${URL}
+spring.datasource.username=${BD_USUARIO}
+spring.datasource.password=${BD_CONTRASENIA}
 
+# Mostrar código SQL ejecutado
 spring.jpa.show-sql=true
 
-// Configuracion de errores
+# Configuración de errores
 server.error.include-stacktrace=never
